# portfolio

./: .env  CMakeLists.txt  README.md  imgui.html  package-lock.json  package.json  tsconfig.json
public/assets/: languages.json
src/: app.ts  details.hpp  main.cpp  window.cpp  window.hpp
src/components/: ButtonWithImage.hpp
src/routers/: routers.ts
src/routers/web/: home.ts
src/routers/web/views/: home.pug
src/routers/web/views/shared/: footer.pug  head.pug  header.pug
src/utils/: http.cpp  http.hpp  image.hpp
